Edits to paper 6

--- a/content/1-history/6.md
+++ b/content/1-history/6.md
@@ -45,11 +45,11 @@ Moreover, there is now a trend toward reducing the amount of additives in the li
 
 ## Treatments to Postpone Lining
 
-In the 1970s and 1980s, leading studios and institutions evolved new methods of preserving linen canvases that are still widely used in conservation practice in Russia. One of the most vivid examples is a tear-mending technique developed at GOSNIIR in the 1970s that is still widely used by conservators throughout the country ({% cite 'Surovov and Yashkina 1979' %}). It suggests that tears and cuts of the textile painting supports are treated with 5% solution of polyvinyl butyral (PVB) in ethanol or isopropanol. Saturated threads are interwoven and after drying are fixed using a hot spatula. This adhesive has been widely used in conservation practice in Russia since the 1950s ({% cite 'Rumyantsev 1953' %}), especially for treating murals, ceramics, and fabric painting supports. Its glass transition temperature (Tg) is approximately 60°C–70°C. “PVB films are resistant to light and heat-sealable at temperatures above 120°C. ... PVB films are noted for their biostable and abrasion resistance properties as well as for good colorfastness against UV light, low static generation, and low water absorbtion” ({% cite 'Sannikova 2018' '106' %}). In 2008, the tear-mending technique was slightly extended by adjusting the method for strip-lining two-sided paintings to avoid overlaps of new margins over the paint layer ({% cite 'Yashkina and Churakova 2013' %}). The working procedure has also slightly changed. Following a general trend holding that less is more, conservators tend to use less adhesive for the process: instead of saturating canvas around the tears, they just apply it to the direct spots.
+In the 1970s and 1980s, leading studios and institutions evolved new methods of preserving linen canvases that are still widely used in conservation practice in Russia. One of the most vivid examples is a tear-mending technique developed at GOSNIIR in the 1970s that is still widely used by conservators throughout the country ({% cite 'Surovov and Yashkina 1979' %}). It suggests that tears and cuts of the textile painting supports are treated with 5% solution of polyvinyl butyral (PVB) in ethanol or isopropanol. Saturated threads are interwoven and after drying are fixed using a hot spatula. This adhesive has been widely used in conservation practice in Russia since the 1950s ({% cite 'Rumyantsev 1953' %}), especially for treating murals, ceramics, and fabric painting supports. Its glass transition temperature (Tg) is approximately 60°C–70°C. “PVB films are resistant to light and heat-sealable at temperatures above 120°C .... PVB films are noted for their biostable and abrasion resistance properties as well as for good colorfastness against UV light, low static generation, and low water absorbtion” ({% cite 'Sannikova 2018' '106' %}). In 2008, the tear-mending technique was slightly extended by adjusting the method for strip-lining two-sided paintings to avoid overlaps of new margins over the paint layer ({% cite 'Yashkina and Churakova 2013' %}). The working procedure has also slightly changed. Following a general trend holding that less is more, conservators tend to use less adhesive for the process: instead of saturating canvas around the tears, they just apply it to the direct spots.
 
 A method of stabilizing canvases by starch sizing was introduced by conservators of the State Tretyakov Gallery and came into common practice as a procedure for conserving canvas ({% cite 'Yushkevich 1995' %}). The technique was first developed in the 1970s but was not published until the mid-1990s, being constantly improved in the interim by its author, Galina Yushkevich ({% cite 'Yushkevich 1995' %}).
 
-Before performing the operation, the picture must be stretched on paper margins; the painting layer should be fully covered by the facing. These precautions guarantee that the canvas of the painting is kept from shrinking during treatment, which involves heat and moisture. Afterward, the painting is put facedown on a flannel or woven felt to protect the impasto. Sizing is performed by applying a 10% starch paste on the reverse of the picture and spreading it evenly. After the paste dries a little it is delicately removed with a palette knife. The small amount of remaining starch is pressed with a warm iron. This causes the residue of the paste to be absorbed into the structure of the picture, which helps reduce canvas deformations and makes the support less responsive to changes in temperature and humidity.
+Before performing the operation, the picture must be stretched on paper margins; the painting layer should be fully covered by the facing. These precautions guarantee that the canvas of the painting is kept from shrinking during treatment, which involves heat and moisture. Afterward, the painting is put facedown on a flannel or woven felt to protect the impasto. Sizing is performed by applying a 10% starch paste on the reverse of the picture and spreading it evenly. After the paste dries a little, it is delicately removed with a palette knife. The small amount of remaining starch is pressed with a warm iron. This causes the residue of the paste to be absorbed into the structure of the picture, which helps reduce canvas deformations and makes the support less responsive to changes in temperature and humidity.
 
 This method is effective for treatment of canvas undulations, so it was adopted by many conservators and is still widely used in many studios. However, during the past few years this method has been reevaluated. Saturating canvas with starch ultimately makes the linen fibers more brittle and prone to microbiological damage. Nowadays cellulose ethers are mostly substituted for the starch; this also functions to better adsorb dust and glue residues from the canvas ({% cite 'Churakova, Karasyova, and Yurovetskaya 2018' '56' %}), but such total saturation of fabric support is still debatable.
 
