Edits to paper 8

--- a/content/2-present-practice/8.md
+++ b/content/2-present-practice/8.md
@@ -30,7 +30,7 @@ The painting’s checkered early history has affected its condition. In 1650, sh
 
 {% figure 'fig-8-3' %}
 
-Since the painting entered the National Gallery’s collection it has rarely traveled. During World War I, the picture was evacuated to Overstone Park, outside of Northampton. During the World War II, it went first to Penrhyn Castle, and then in 1941 to the Manod slate mine in Wales. On both of these latter occasions, it was transported upright on its stretcher in a large wooden case strapped to the back of a lorry. On its journey to Manod, the truck had to pass through a tunnel that was not tall enough to accommodate the height of the case. This had been anticipated, and the road had been dug up beforehand to make extra height, but even so there was insufficient headroom for the truck to pass through, and the truck’s tires had to be deflated ({% cite 'Clark 1977' '6' %}; {% cite 'Davies and Rawlins 1946' '13' %}). On its return trip to the National Gallery in June 1945, the painting traveled mostly by train. More recently, in January 2018, the painting was lent to the Royal Academy’s exhibition *Charles I: King and Collector*, and it again remained on its stretcher for the short journey across London.
+Since the painting entered the National Gallery’s collection it has rarely traveled. During World War I, the picture was evacuated to Overstone Park, outside of Northampton. During World War II, it went first to Penrhyn Castle, and then in 1941 to the Manod slate mine in Wales. On both of these latter occasions, it was transported upright on its stretcher in a large wooden case strapped to the back of a lorry. On its journey to Manod, the truck had to pass through a tunnel that was not tall enough to accommodate the height of the case. This had been anticipated, and the road had been dug up beforehand to make extra height, but even so there was insufficient headroom for the truck to pass through, and the truck’s tires had to be deflated ({% cite 'Clark 1977' '6' %}; {% cite 'Davies and Rawlins 1946' '13' %}). On its return trip to the National Gallery in June 1945, the painting traveled mostly by train. More recently, in January 2018, the painting was lent to the Royal Academy’s exhibition *Charles I: King and Collector*, and it again remained on its stretcher for the short journey across London.
 
 ## Early Relining Treatments
 
