Edits to paper 9

--- a/content/2-present-practice/9.md
+++ b/content/2-present-practice/9.md
@@ -30,7 +30,7 @@ Lining canvas paintings has ever been a contentious action. Many canvas painting
 
 The “moratorium” on lining called for after the 1974 Greenwich Conference on Comparative Lining Techniques ({% cite 'Villers 2003b' %}) never materialized, but the idea encouraged conservators to think of other options for structural repair. Full linings fell out of fashion, and strip-lining as well as thread-by-thread tear mending became standard practice. However, these options cannot be used for severely structurally compromised canvas paintings—thus, full lining continues to be necessary. The mist-lining process is still a relatively new technique and not yet part of many conservators’ toolkits. Familiarity with this process can expand the contemporary conservator’s repertoire and provide one of a few ethical solutions for structural support.
 
-The mist-lining process was invented and developed by Jos van Och in the 1990s at the Stichting Restauratie Atelier Limburg (SRAL) ({% cite 'Fife, van Och, and Harrison 2017' %}; {% cite 'Seymour and van Och 2005' %}; {% cite 'van Och and Hoppenbrouwers 2003' %}). The term *mist-lining* was coined by SRAL in the early 2000s and is now used to denote the technique, system, and process. The mist-lining system has roots in developments in structural treatments for lining canvases initially presented in the 1970s by Gustav Berger and Vishwa R. Mehra and presented by both at the greenwich conference in 1974 ({% cite 'Berger 1972a' %}; {% cite 'Mehra 1975a' %}; {% cite 'Mehra 1975b' %}).
+The mist-lining process was invented and developed by Jos van Och in the 1990s at the Stichting Restauratie Atelier Limburg (SRAL) ({% cite 'Fife, van Och, and Harrison 2017' %}; {% cite 'Seymour and van Och 2005' %}; {% cite 'van Och and Hoppenbrouwers 2003' %}). The term *mist-lining* was coined by SRAL in the early 2000s and is now used to denote the technique, system, and process. The mist-lining system has roots in developments in structural treatments for lining canvases initially presented in the 1970s by Gustav Berger and Vishwa R. Mehra and presented by both at the Greenwich conference in 1974 ({% cite 'Berger 1972a' %}; {% cite 'Mehra 1975a' %}; {% cite 'Mehra 1975b' %}).
 
 Mist-lining is a noninvasive lining technique that involves spraying minimal amounts of an acrylic dispersion resin onto an auxiliary canvas before adhering that canvas to the reverse of the original support, often without tension. This open adhesive network is regenerated from the dry state, eliminating moisture. Solvent vapors (or gentle heat) are used to swell and tackify the adhesive.[^1] Bonding occurs under light pressure when the adhesive is activated. The system can be classified as a cold-lining method and forms a nap bond. The lining adhesive remains sandwiched between the two canvases with no impregnation of either textiles or decorative layers, which aids reversibility and negates any alteration of appearance.
 
@@ -160,9 +160,9 @@ The idea that the original canvas will never be the same again after a lining is
 
 2012: Glue-Paste Linings: Tradition, Performance and Stability, conference at Thyssen-Bornemisza Museum, Madrid
 
-2015–18: Workshops for professions at M. A. Vrubel Museum, Omsk (2015); Indira Gandhi National Centre for the Arts, New Delhi (2016); Indian National Trust for Art and Cultural Heritage, Kolkata (2016); and the State Tretyakov Gallery, Moscow (2018); Brera Academy of Fiine Art, Arcore, Milan (2022)
+2015–18: Workshops for professions at M. A. Vrubel Museum, Omsk (2015); Indira Gandhi National Centre for the Arts, New Delhi (2016); Indian National Trust for Art and Cultural Heritage, Kolkata (2016); the State Tretyakov Gallery, Moscow (2018); and Brera Academy of Fiine Art, Arcore, Milan (2022)
 
-2019–23: Getty Foundation, Conserving Canvas initiative, Mist-Lining Workshop (2019), Pilot Virtual Online Mist-Lining Workshop (2021), and Regional Mist-Lining workshop (2023)
+2019–23: Getty Foundation, Conserving Canvas initiative, Mist-Lining Workshop (2019); Pilot Virtual Online Mist-Lining Workshop (2021); and Regional Mist-Lining workshop (2023)
 
 {% backmatter %}
 
