--- a/content/2-present-practice/11.md
+++ b/content/2-present-practice/11.md
@@ -97,9 +97,9 @@ This adhesive was sprayed on the stretched polyester canvas.[^19] Particular att
 
 Before lining the painting facedown in the vacuum system, it was necessary to fill the biggest losses with stucco to avoid the original canvas being pushed toward the paint surface, where paint layers were missing.
 
-The adhesion of new canvas was carried out in a vacuum bag (envelope), with the painting placed facedown on a worktop. Nonwoven fabric[^21] was used as a cushioning layer to preserve the thin brushstrokes, keeping the seams on the back at the same time. The adhesive was reactivated by placing 70°C water inside a loom and treating circumscribed areas of about 1 square meter using the tub system described above and outlined in [figure 11.4](#fig-11-4). To stretch the canvas on the final expandable stretcher, the painting was positioned facedown to reduce the forces applied at the edges.
+The adhesion of new canvas was carried out in a vacuum bag (envelope), with the painting placed facedown on a worktop. Nonwoven fabric[^21] was used as a cushioning layer to preserve the thin brushstrokes, keeping the seams on the back at the same time. The adhesive was reactivated by placing 70°C water inside a loom and treating circumscribed areas of about 1 square meter using the tub system described above and outlined in [figure 11.4](#fig-11-4) and [figure 11.5](#fig-11-5). To stretch the canvas on the final expandable stretcher, the painting was positioned facedown to reduce the forces applied at the edges.
 
-Not all the losses were filled and retouched because the art historian who directed the conservation treatment chose to leave a historical memory of the flood of Florence. When the treatment was finished, the painting was exhibited at the Medici Chapels in Florence ([fig. 11.5](#fig-11-5)).
+Not all the losses were filled and retouched because the art historian who directed the conservation treatment chose to leave a historical memory of the flood of Florence. When the treatment was finished, the painting was exhibited at the Medici Chapels in Florence ([fig. 11.6](#fig-11-6).
 
 ## Conclusion
 
@@ -143,7 +143,7 @@ Thanks to Jennifer Ginevra (TEFL/Cambridge educator) and Dan Butcovich Pieroni (
 
 [^13]: Ten minutes was the minimum estimated time needed to guarantee that the adhesive reached the desired temperature.
 
-[^14]: This system was first performed by Sergio Taiti in the early 1980s. A video showing the tub system process should be available soon on the Getty Foundation website.
+[^14]: This system was first performed by Sergio Taiti in the early 1980s. A video showing the tub system process is available at https://vimeo.com/801439551/7d9863ee77.
 
 [^15]: Working with the painting facedown—during both the adhesion of the paint layers and the lining—prevented the original seams from being pushed onto the paint layers, showing on the front and thus compromising the artwork.
 
