Edits to paper 14

--- a/content/2-present-practice/14.md
+++ b/content/2-present-practice/14.md
@@ -90,7 +90,7 @@ The tear in the lining canvas was closed with stitches sewn by using a semicircu
 
 ## Twentieth-Century Lining Procedures
 
-Lining methods changed little over the centuries—restorers were trained by their predecessors and trained their own successors. For many years, there was a strict division of labor between structural and “artistic” work. Though that is still enforced in some studios, the KHM abandoned it in the early 1980s. So-called artistic restoration work included cleaning, retouching, and varnishing and was the preserve of painter-restorers until 1934, when the conservation program was established at the Academy of Fine Arts Vienna and when trained restorers started to take over.[^20] Structural treatments (lining, cradling, filling) were considered less important and presumably were carried out by technicians who had mostly trained as cabinetmakers and were probably supervised by restorers.
+Lining methods changed little over the centuries—restorers were trained by their predecessors and trained their own successors. For many years, there was a strict division of labor between structural and “artistic” work. Though that is still enforced in some studios, the KHM abandoned it in the early 1980s. So-called artistic restoration work included cleaning, retouching, and varnishing and was the preserve of painter-restorers until 1934, when the conservation program was established at the Academy of Fine Arts Vienna and trained restorers started to take over.[^20] Structural treatments (lining, cradling, filling) were considered less important and presumably were carried out by technicians who had mostly trained as cabinetmakers and were probably supervised by restorers.
 
 Irons were replaced by a veneer press in the late 1930s. The aim was to minimize the physical impact during lining procedures—humidity, heat, and pressure—by omitting heat. Once cleaned and filled, the paintings were pressed in the veneer press between wooden boards and several layers of felt and molino, a plain cotton cloth. Due to the use of an aqueous lining adhesive, the painting needed to be pressed before the unstretched canvas reacted to humidity—timing was of the essence. For these linings, however, the paintings were pressed repeatedly—apparently, the period favored a flatter surface texture than we do today.
 
@@ -188,7 +188,7 @@ Conservation of large paintings requires teamwork, and many colleagues have cont
 
 [^25]: Size before treatment was 253 x 119 cm.
 
-[^26]: “827. Ein grosses Stuckh von Öhlfarb auff Leinwaeth, ... In einer schmallen, schwartzen Ramen, hoch 10 Spann 9 Finger vnd braidt 9 Spann / 5 Finger./ deponiert” (A large oil painting on canvas ... in a narrow black frame, ca. 300 by ca. 188 cm / stored). Size listed in 1659 inventory is 226.72 x 197.6 cm, including frame. Size after treatment (stretcher) is 225 x 196 cm.
+[^26]: “827. Ein grosses Stuckh von Öhlfarb auff Leinwaeth . . . In einer schmallen, schwartzen Ramen, hoch 10 Spann 9 Finger vnd braidt 9 Spann / 5 Finger./ deponiert” (A large oil painting on canvas . . . in a narrow black frame, ca. 300 by ca. 188 cm / stored). Size listed in 1659 inventory is 226.72 x 197.6 cm, including frame. Size after treatment (stretcher) is 225 x 196 cm.
 
 [^27]: Indirect humidification above nonwoven Gore-Tex fabric, and subsequent drying under pressure (sandbags). Severely distorted areas of canvas were rearranged after vaporization using insect pins.
 
