Edits to paper 16

--- a/content/3-open-questions/16.md
+++ b/content/3-open-questions/16.md
@@ -32,7 +32,7 @@ abstract: "This study presents a novel technique to determine the tensile streng
 
 In order to make educated decisions about the ability to transport paintings and the potential need for an appropriate conservation treatment, it is crucial to know the mechanical strength of a canvas. However, methods to measure this and related parameters are scarce. Even today, the assessment of original canvas is often based only on its optical appearance, such as browning and yellowing, and pH value. However, these parameters are not directly related to age and mechanical properties.
 
-Flax is frequently used for the canvases of historical paintings. It is a natural fiber and consists mainly of cellulose. The most dominant degradation process of such canvases is the depolymerization of cellulose by hydrolysis, which in turn influences their mechanical strength ({% cite 'Timar-Balazsy and Eastop 1998' %}). In 1939, Staudinger and Reinecke investigated a potential correlation between aging, cellulose depolymerization, and the mechanical strength of historical canvas ({% cite 'Staudinger and Reinecke 1939' %}). However, so far this correlation has not been experimentally proven. For paper, in contrast, a link between the mechanical properties and the degree of cellulose depolymerization has been found ({% cite 'Zou et al. 1994' %}).
+Flax is frequently used for the canvases of historical paintings. It is a natural fiber and consists mainly of cellulose. The most dominant degradation process of such canvases is the depolymerization of cellulose by hydrolysis, which in turn influences their mechanical strength ({% cite 'Timar-Balazsy and Eastop 1998' %}). In 1939, Staudinger and Reinecke investigated a potential correlation between aging, cellulose depolymerization, and the mechanical strength of historical canvas ({% cite 'Staudinger and Reinecke 1939' %}). So far, however, this correlation has not been experimentally proven. For paper, in contrast, a link between the mechanical properties and the degree of cellulose depolymerization has been found ({% cite 'Zou et al. 1994' %}).
 
 In textile engineering. the tensile strength of fabrics is determined by using standard protocols that require a minimum length of 200 mm; for the testing of yarns, a minimum length of 250 mm is needed. Those requirements limit their application to conservation research. If large amounts of sample material are available, such as for artificially aged canvas, it is possible to determine the strength of the material using methods such as the standard tensile test method on fabric or yarn, which gives a maximum tensile strength value ({% cite 'Reumann 2000' %}), but to date no direct correlation between the age-related chemical alterations of the cellulose molecular constitution and the physical consequences for the fabric has been established ({% cite 'Young 2005' %}). The reason for this is the lack of methods to investigate original canvases. Thus, the determination of the degree of cellulose depolymerization by viscometry was until now the only method available to investigate the constitution of original canvas ({% cite 'Stoll and Fengel 1981' %}). However, the measured degree of polymerization is difficult to assess with respect to the aging process and the mechanical properties. Therefore, a technique for measuring the mechanical properties on smaller components of a canvas such as yarns or fibers is needed.
 
