Edits to paper 17

--- a/content/3-open-questions/17.md
+++ b/content/3-open-questions/17.md
@@ -46,7 +46,7 @@ abstract: "Paintings conservators at the Smithsonian American Art Museum survey 
 
 ## Introduction
 
-The Smithsonian American Art Museum (SAAM), in Washington, DC, together with its branch museum, the Renwick Gallery, stewards a national collection containing thousands of paintings that span more than three centuries of American art. Established in 1829, the collection at SAAM moved to its current location in the Old Patent Office Building in 1968. This was just two years after paintings conservator Charles Olin formed the first conservation lab for the collection. The paintings in the collection have been cared for by four generations of conservators over the past fifty years.
+The Smithsonian American Art Museum (SAAM) in Washington, DC, together with its branch museum, the Renwick Gallery, stewards a national collection containing thousands of paintings that span more than three centuries of American art. Established in 1829, the collection at SAAM moved to its current location in the Old Patent Office Building in 1968. This was just two years after paintings conservator Charles Olin formed the first conservation lab for the collection. The paintings in the collection have been cared for by four generations of conservators over the past fifty years.
 
 The conservation records reflect evolving approaches to the methodology and protocols used in the structural treatment of paintings, as they encapsulate the training, experience, and philosophical approaches to treatments brought by each paintings conservator. Research into these past treatments continues in order to gain a greater understanding of the materials used as well as the application methods and overall intent of the treatments. The initial phase of research focused on wax-resin linings and their effectiveness and longevity as a treatment option for paintings in the collection, and, through the use of instrumental analysis, compared specific recipes recorded in treatments with samples from the paintings exhibiting lining deterioration.
 
