Edits to paper 18

--- a/content/3-open-questions/18.md
+++ b/content/3-open-questions/18.md
@@ -22,8 +22,8 @@ contributor:
     sort_as: "3"
   - first_name: "Julia"
     last_name: "Betancor"
-    title: "Principal Conservator, JB Art C&R, and Head Art Conservator, Colección"
-    affiliation: "SOLO, Madrid"
+    title: "Principal Conservator"
+    affiliation: "JB Art C&R, and Head Art Conservator, Colección SOLO, Madrid"
     sort_as: "4"
 keywords: "lining, gacha, glue-paste, adhesive, documentation, experimentation"
 abstract: "A research project was carried out between 2011 and 2015 at the Complutense University of Madrid, the aim of which was to suggest improvements to guarantee future conservation of canvases lined with a glue-paste adhesive called *gacha*. We started with three objectives: documenting the origin of recipes and the different methods used for this treatment in Spain and Europe, as there is still little knowledge about this kind of lining; choosing case studies; and finally, carrying out a series of experimental tests to evaluate the performance of the basic materials in the recipes and of some variants in the textiles often used as lining supports."
@@ -95,7 +95,7 @@ Examples of case studies include:
 
 -   Murillo’s *Juan the Patrician’s Dream*, in the Museo del Prado.[^5]
 
--   *The Spinners* and *Philip III on horseback* by Velázquez, in the Museo del Prado.
+-   *The Spinners* and *Philip III on Horseback* by Velázquez, in the Museo del Prado.
 
 {% figuregroup '2' 'fig-18-5-a, fig-18-5-b' '**Figure 18.5** (a) Recipe for *gacha* used in 1955 by Tomás Pérez Alférez, liner at the Museo del Prado, on the painting shown in fig. 18.4. (b) Cross section of glue-paste lining, corresponding to the left sleeve. Layers from the bottom: (1) glue-paste, (2) ground, (3) black paint. Images: (a) Archivo del Museo Nacional del Prado; (b) Real Academia de Bellas Artes de San Fernando de Madrid (E. Parra, Larco Química y Arte; conservation report: Silvia Viana, Ángeles Solís, and Judit Gasca)' %}
 
