Edits to paper 19

--- a/content/3-open-questions/19.md
+++ b/content/3-open-questions/19.md
@@ -31,7 +31,7 @@ The developments in the structural treatment of paintings in the late 1970s and 
 
 It is important to recognize the research and innovation that influenced the field in the 1970s and 1980s, setting the stage for our own research program and treatment development at CCI.
 
-Papers and discussion during the 1975 ICOM-CC conference in Venice led to a reevaluation of treatment practices. “All at once” structural treatments, using heat and significant vacuum pressure, were the norm before the 1970s. Vishwa Mehra countered with a much less interventive, stepwise approach ({% cite 'Mehra 1975a' %}; {% cite 'Mehra 1978' '' '1978'%}, {% cite 'Mehra 1981a' '' '1981a' %}). Each painting was considered as structurally unique, each aspect of the structural treatment (out-of-plane distortions, tears, flaking, flattening, lining, etc.) was a separate step, and only the necessary treatment steps were undertaken.
+Papers and discussion during the 1975 ICOM-CC conference in Venice led to a reevaluation of treatment practices. “All at once” structural treatments, using heat and significant vacuum pressure, were the norm before the 1970s. Vishwa Mehra countered with a much less interventive, stepwise approach ({% cite 'Mehra 1975a' %}, {% cite 'Mehra 1978' '' '1978'%}, {% cite 'Mehra 1981a' '' '1981a' %}). Each painting was considered as structurally unique, each aspect of the structural treatment (out-of-plane distortions, tears, flaking, flattening, lining, etc.) was a separate step, and only the necessary treatment steps were undertaken.
 
 As part of his system, Mehra used a low-pressure “cold” table.[^1] Like the tables introduced by Bent Hacke in the 1960s, it pulled high volumes of air through a perforated surface into a plenum below. This enabled drying of an aqueous adhesive while maintaining (low) pressure on the painting ({% cite 'Hacke 1978' %}, {% cite 'Hacke 1981b' '' '1981b' %}). The design of these “suction” tables proliferated, allowing for controlled humidification for relaxation and flattening treatments of paintings, both on and off their auxiliary supports. (See [Jim Coddington’s article](/3-open-questions/20/) in these proceedings.)
 
@@ -101,7 +101,7 @@ The primary measurement for answering this question is stress relaxation—the l
 
 By 1991, we were placing our review of published data on the mechanics of paints within the framework of polymer viscoelasticity. Specifically, we introduced the primary tool of that framework—the “master curve”—which plotted elasticity over the full range of a polymer’s behavior, from glassy through leathery to rubbery as a function of temperature, plasticizer, and time ({% cite 'Michalski 1991' %}).
 
-To understand whether a lining will actually support the painting and by how much, analysis of results focused on whether the lining is at higher tension than the painting during stretching, during shock and vibration, and during fluctuations in RH and temperature—and on whether the lining can maintain this support over many years. Sample preparation and experimental procedures have been published elsewhere ({% cite 'Michalski and Daly Hartin 1996' %}, {% cite 'Daly Hartin et al. 2010' %}, {% cite 'Daly Hartin et al. 2011' '' '2011' %}, {% cite 'Daly Hartin et al. 2015a' '' '2015a' %}, {% cite 'Michalski et al. 2014' %}). The 2015 article also summarizes the results of the project and their implications for linings.
+To understand whether a lining will actually support the painting and by how much, analysis of results focused on whether the lining is at higher tension than the painting during stretching, during shock and vibration, and during fluctuations in RH and temperature—and on whether the lining can maintain this support over many years. Sample preparation and experimental procedures have been published elsewhere ({% cite 'Michalski and Daly Hartin 1996' %}; {% cite 'Daly Hartin et al. 2010' %}, {% cite 'Daly Hartin et al. 2011' '' '2011' %}, {% cite 'Daly Hartin et al. 2015a' '' '2015a' %}; and {% cite 'Michalski et al. 2014' %}). The 2015 article also summarizes the results of the project and their implications for linings.
 
 Tension was measured continuously over time. If the sample is undergoing stress relaxation, then the tension drops over time, as shown by all curves in [figure 19.5](#fig-19-5). The process of building these master curves that extend to very short and very long times is described by [Hagan](/1-history/2) in this volume.
 
