Edits to paper 20

--- a/content/3-open-questions/20.md
+++ b/content/3-open-questions/20.md
@@ -40,7 +40,7 @@ Mehra’s ideas had been in the air for some time.[^2] A reading of the ICOM rep
 
 7.  Nonpenetrating lining adhesive (note similarity to item 2)
 
-8.  Adhesives should be stable with RH and have variable strength and application properties.
+8.  Adhesives should be stable with RH and have variable strength and application properties
 
 He then went on to specify that the materials used for structural restoration should be synthetic in order to fulfill stability and reversibility criteria. Putting all of this together was, in Mehra’s thinking, a fundamentally new approach that was outside the glue and wax-lining traditions. The practical application of this theoretical position required the separation of consolidation from lining. In this way, it was possible to meet criteria of lightness and to select materials appropriate to the mechanical and aesthetic properties of the painting under treatment.
 
@@ -96,7 +96,7 @@ Of course, unless something is wet, one doesn’t need to concern oneself with h
 
 Humidifying paintings to aid in the plasticization of the paint film, whether using damp blankets or blotters or via the water in a glue-paste adhesive, was of course a well-established practice prior to the basic research cited above. Both practice and tradition made clear the need to control the amount of moisture introduced into the composite structure of a painting. A mechanized system of humidification would thus seek to maintain a level of RH that will give the conservator confidence that plastic changes are occurring only in desired layers of the painting—the size and paint film—while not exceeding dangerous levels of moisture in the canvas.
 
-All of this theoretical background was fundamental to the design of the final table I will discuss, one of which was built for New York’s Museum of Modern Art (MOMA) by Bill Maxwell. The table design was initiated by Albert Albano and sought to address the specific needs of MoMA, specifically that the table should be fungible: effective for both paper and paintings conservation. Indeed, as Caroline Villers notes in reviewing the state of affairs at the time of the Greenwich lining conference, “The practical problems posed by contemporary paintings were an important driver for change” ({% cite 'Villers 2003a' %}). The nature of MoMA's collection—which includes many large works, composite works, and essentially raw canvas works—dictated that the table would be large, with a high airflow for the “textile” problems but sufficiently flexible to treat local distortions or flaking or even to do straight hot table linings for “traditional” paintings. To achieve all this, the experience and ideas of a number of people, including Stefan Michalski and Gerry Hedley, were consulted on the design.
+All of this theoretical background was fundamental to the design of the final table I will discuss, one of which was built for New York’s Museum of Modern Art (MoMA) by Bill Maxwell. The table design was initiated by Albert Albano and sought to address the specific needs of MoMA, specifically that the table should be fungible: effective for both paper and paintings conservation. Indeed, as Caroline Villers notes in reviewing the state of affairs at the time of the Greenwich lining conference, “The practical problems posed by contemporary paintings were an important driver for change” ({% cite 'Villers 2003a' %}). The nature of MoMA's collection—which includes many large works, composite works, and essentially raw canvas works—dictated that the table would be large, with a high airflow for the “textile” problems but sufficiently flexible to treat local distortions or flaking or even to do straight hot table linings for “traditional” paintings. To achieve all this, the experience and ideas of a number of people, including Stefan Michalski and Gerry Hedley, were consulted on the design.
 
 The base of the 8 × 12 foot (2.4 × 3.7 m) working surface is basically an aluminum-top hot table with heaters attached underneath and double heaters at the sides to minimize any edge heating gradient. On top of this are 1-inch-square aluminum channels that run the length of the table and have holes drilled in the top at regular intervals. These are alternate intake and exhaust channels with an intake header at one end and exhaust at the other, where four 100 CFM fans run in parallel. On top of the channels is an aluminum heat exchanger, which is effective at distributing the airflow from the channels to the top surface (a perforated aluminum sheet) while also aiding in transfer of heat to the table surface. Pressure and flow are controlled by leakage, a rheostat that varies the voltage to the pumps, an intake valve at the intake header end of the table. By opening an additional valve, this intake air can also be passed through an auxiliary heater, and this provides an effective means of minimizing loss of the heat conducted up through the layers to the airflow layers.
 
