Edits to paper 21
and table

--- a/content/3-open-questions/21.md
+++ b/content/3-open-questions/21.md
@@ -45,7 +45,7 @@ The reality, now and then, is probably that most active treatments change the st
 
 The seventh requirement—that the adhesive selected should not be allowed to permeate the canvas, ground, and paint film—is closely related to Mehra’s second requirement. Mehra wanted the adhesive to form only a film between old and new canvases, instead of penetrating the structure. This idea has prevailed in many traditions, and the nap-bond lining (or, in Scandinavia, lamination, inspired by Bent Hacke) became popular among progressive conservators of the time. The nap-bond technique was considered minimal intervention and was intended to ensure reversibility. Saving the physical integrity of an object is written into E.C.C.O.’s Professional Guidelines, in article V of the Code of Ethics ({% cite 'E.C.C.O. 2003' %}) as well as AIC’s Code of Ethics, article 21 of the Guidelines for Practice ({% cite 'AIC n.d.' %}). Thus, the requirement could probably still be seen as having significant weight, even though both glue paste and wax-resin lining are still practiced, as is impregnation of canvas paintings with glue and Beva.
 
-This is much in line with the sixth requirement, that increase of weight due to lining should be minimal. This, of course, was in comparison to a wax-resin lining, which was very heavy. A large format could be deformed simply by the weight of a heavy lining material if it was not supported. Lightweight treatments are still preferable, including stretchers and backing boards—especially for large formats—in light of increased loan activity between museums. In these situations, extra weight makes the painting more difficult to handle and increases the risk of high forces due to impact if the painting is dropped during transportation. Furthermore, a heavy structure can increase the risk of failure in the hanging system.
+This is much in line with the sixth requirement that increase of weight due to lining should be minimal. This, of course, was in comparison to a wax-resin lining, which was very heavy. A large format could be deformed simply by the weight of a heavy lining material if it was not supported. Lightweight treatments are still preferable, including stretchers and backing boards—especially for large formats—in light of increased loan activity between museums. In these situations, extra weight makes the painting more difficult to handle and increases the risk of high forces due to impact if the painting is dropped during transportation. Furthermore, a heavy structure can increase the risk of failure in the hanging system.
 
 ### The Flexibility Requirement
 
