Edits to paper 25

--- a/content/4-case-studies/25.md
+++ b/content/4-case-studies/25.md
@@ -170,7 +170,7 @@ As a last step, I continued with the restoration: filling lacunae with the synth
 
 ## Conclusion
 
-The Africa Museum’s collection is fascinating and interesting due to the many characteristics and issues involved. The most important problem to solve was safe handling, which is why the research concentrated on the structural treatment. The trial samples in cotton made with the transparent canvases Petex and Nitex, Plextol B500, and Beva 371 film were assessed using accelerated aging and tensile tests to discover the strength and the sustainability of these materials. Beva 371 film with Petex showed good properties. The results obtained were determined through the treatment of one of the paintings from the collection, which worked very well.
+The Africa Museum’s collection is fascinating due to the many characteristics and issues involved. The most important problem to solve was safe handling, which is why the research concentrated on the structural treatment. The trial samples in cotton made with the transparent canvases Petex and Nitex, Plextol B500, and Beva 371 film were assessed using accelerated aging and tensile tests to discover the strength and the sustainability of these materials. Beva 371 film with Petex showed good properties. The results obtained were determined through the treatment of one of the paintings from the collection, which worked very well.
 
 As this conservation treatment was unusual and atypical, my research allowed me to question my views on traditional methods of conservation and restoration. It also underlined the importance of painting materials and the importance of handling artworks with care for their future preservation. Today, restoring contemporary art is all about research and innovation, and we will always have to battle with ethics to find the best way to restore a painting. It was challenging to treat this ephemeral painting, and I gave it my best.
 
