Edits to paper 27

--- a/content/5-adhesives/27.md
+++ b/content/5-adhesives/27.md
@@ -115,7 +115,7 @@ Solutions 1 and 2 were applied to degraded cotton canvases by spraying and brush
 
 #### FEG-SEM
 
-The structural analysis of the treated samples was carried out using a Philips XL30 field emission scanning electron microscope (SEM) (FEI, Eindhoven, Netherlands) equipped with an energy dispersive X-ray analysis (EDX) detector (Oxford Instruments (United Kingdom). The system was operated at 5 kV accelerating voltage. Samples (3 × 5 mm) were mounted on aluminum stubs (Agar Scientific, Essex, U.K.) and sputtered with a gold-palladium alloy (Polaron E5000 sputter coater) for one and a half minutes.
+The structural analysis of the treated samples was carried out using a Philips XL30 field emission scanning electron microscope (SEM) (FEI, Eindhoven, Netherlands) equipped with an energy dispersive X-ray analysis (EDX) detector (Oxford Instruments [United Kingdom]). The system was operated at 5 kV accelerating voltage. Samples (3 × 5 mm) were mounted on aluminum stubs (Agar Scientific, Essex, U.K.) and sputtered with a gold-palladium alloy (Polaron E5000 sputter coater) for one and a half minutes.
 
 #### Tensile testing: Quantification of the reinforcement
 
